<resources>
    <string name="app_name">RestaurantSearch</string>
    <string name="search_go">周辺のお店を検索</string>
    <string name="loading">読み込み中・・・</string>
    <string-array name="item_label">
        <item>300m</item>
        <item>500m</item>
        <item>1000m</item>
        <item>2000m</item>
    </string-array>
    <string name="next_button">次の10件</string>
    <string name="back_button">前の10件</string>
    <string name="address">住所</string>
    <string name="phone">電話番号</string>
    <string name="opentime">営業時間</string>
    <string name="nodataAccess">アクセス情報なし</string>
    <string name="URL">URL</string>
    <string name="pagenum2">件を表示中</string>
    <string name="pageAnnounce">%d件中 %d～%d件を表示中</string>
    <string name="app_name_jp">レストラン検索アプリ</string>
    <string name="description">現在地周辺のレストランを検索できます。</string>
</resources>
